--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </div>
       <div class="heart-seal"></div>
     </div>
-    <div>
+    <div class="images">
       <img class="img1" src="/1.png" />
       <img class="img2" src="/2.png" />
     </div>
